* Fixed a specific fossil generating one block in the air.
* Fixed Whirliweeds not being "replaceable".
* Fixed numerous tags from being broken.
* Fixed numerous broken stonecutter recipes for Byslate and Bystone (All types).
* Fixed multiple Bygone mobs having "lag" between movements.
* Fixed Underhang Vines popping out Glowstone when right-clicked.


## **Updates in 1.2.3**

### Its been a while, hasn't it? Well, the wait is over! We are back! And starting with this first minor update:
### A brand new dependency, to make things moving forward even easier for us development wise!
### And we've snuck in some new blocks, for the Bystone and Byslate blocksets!
### Please join us in the official [Discord](https://discord.gg/DMW28XH235)!

# New features in 1.2.3:
* Added Polished, Chiseled, and Shingled block variants for Bystone!
* Added Polished, Chiseled, and Shingled block variants for Byslate!


# Technical features:

* Requires JinxedLib for both Fabric and NeoForge now!

* Furnace Fuels and Compostables are now JSON files for the Bygone!

* Added all Bygone Vegetation to the #replaceable (and by extension, the #enchantment_power_transmitter) tags.

* Rearranged the Bygone creative mode tab!

* Removed unused Architectury dependency!


## **Updates in 1.2.2**

### Hello all! We were hoping to release 1.2.2 a bit later with the rest of the planned content, but we encountered an unfortunate crash that occurs with other mods installed.
### We've added two new crops, a new mob, and a new structure found  throughout the Bygone! We have even more content planned, and we'd appreciate your feedback if possible!
### Please join us in the official [Discord](https://discord.gg/DMW28XH235)!


# New features in 1.2.2:
* Added the Chantrelle.
* Added the Plaga Crop.
* Added the Pest mob.
* Added the Pest Spawn Egg.
* Added Abandoned Farms


> Plaga Crop

* The Plaga Crop can be planted on Claystone Farmland and grows into the Plaga.
