@@ -3,7 +3,7 @@
   "texture_size": [32, 32],
   "textures": {
     "0": "bygone:block/glow_gourd_dango",
-    "particle": "bygone:block/glow_gourd_dango"
+    "particle": "bygone:block/glow_gourd_dango_particles"
   },
   "elements": [
     {
