@@ -4,7 +4,7 @@
 	"texture_size": [32, 32],
 	"textures": {
 		"0": "bygone:block/primordial_urchin",
-		"particle": "bygone:block/primordial_urchin"
+		"particle": "bygone:block/primordial_urchin_particles"
 	},
 	"elements": [
 		{
