@@ -3,7 +3,7 @@
 	"texture_size": [64, 64],
 	"textures": {
 		"0": "bygone:block/primordial_urchin_active",
-		"particle": "bygone:block/primordial_urchin_active"
+		"particle": "bygone:block/primordial_urchin_particles"
 	},
 	"elements": [
 		{
